# osm-merge

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  Dockerfile  Doxyfile  Makefile  README.md  calculations.md~  conflator.py  extract.sh  formats.md~  hotstuff.py  index.html  mkdocs.yml  objects.inv  osm.md~  osmhighways.md~  poidup.py  pyproject.toml  requirements.txt  setup.py  sitemap.xml  splitter.py  starlink.md~  tm-splitter.md~  validating.md~
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: docs.yml  gh-pages.yml
CHANGELOG/: index.html
LICENSE/: index.html
about/: index.html
api/: index.html
apidocs/html/: ____init_____8py_source.html  ____version_____8py_source.html  annotated.html  classes.html  classosm__merge_1_1conflateBuildings_1_1ConflateBuildings-members.html  classosm__merge_1_1conflateBuildings_1_1ConflateBuildings.html  classosm__merge_1_1conflateBuildings_1_1ConflateBuildings__coll__graph.dot  classosm__merge_1_1conflatePOI_1_1ConflatePOI-members.html  classosm__merge_1_1conflatePOI_1_1ConflatePOI.html  classosm__merge_1_1conflatePOI_1_1ConflatePOI__coll__graph.dot  classosm__merge_1_1conflator_1_1Conflator-members.html  classosm__merge_1_1conflator_1_1Conflator.html  classosm__merge_1_1conflator_1_1Conflator__coll__graph.dot  classosm__merge_1_1conflator_1_1Conflator_a17d00534ca512d357427b90881d79ef9_cgraph.dot  classosm__merge_1_1conflator_1_1Conflator_a18b40ceaad6bf03bffc872e66beecda8_icgraph.dot  classosm__merge_1_1conflator_1_1Conflator_a79ee7fe26cf92a77983cae8a19ad5aa3_cgraph.dot  classosm__merge_1_1conflator_1_1Conflator_a7b5519a04de87159b1354812f94a229f_cgraph.dot  classosm__merge_1_1conflator_1_1Conflator_a7dcd4c623c5f78c9ef39428acc18c0cb_icgraph.dot  classosm__merge_1_1geosupport_1_1GeoSupport-members.html  classosm__merge_1_1geosupport_1_1GeoSupport.html  classosm__merge_1_1geosupport_1_1GeoSupport__coll__graph.dot  conflateBuildings_8py_source.html  conflatePOI_8py_source.html  conflator_8py_source.html  dir_e79b1050956bcba86f7444eac4da11c3.html  files.html  functions.html  functions_func.html  geosupport_8py_source.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherits.html  menudata.js  namespaceosm__merge.html  namespaces.html  poidup_8py_source.html
apidocs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  searchdata.js
assets/: thumbnail.sh
assets/validation/: thumbnail.sh
boundaries/: index.html
calculations/: index.html
conflation/: index.html
conflator/: conflateBuildings.py  conflateDB.py  conflatePOI.py  conflator.py  geosupport.py
contrib/: README.md  states.sh  update.sh  wilderness.sh
dataflow/: index.html
doc/: conflation.md  conflator.md  splitter.md  utilities.md
docs/: Doxyfile  about.md  api.md  boundaries.md  calculations.md  conflation.md  conflator.md  dataflow.md  formats.md  highways.md  index.md  mvum.md  odkconflation.md  osm-merge.md  osmhighways.md  results.md  splitter.md  tm-splitter.md  trails.md  usgs.md  utilities.md  validating.md  wiki_redirect.md  zion.md
fastclip/: Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  configure  configure.ac  fastclip.cc  fastclip.hh  libtool
formats/: index.html
highways/: index.html
main/docs/: conflation.md
main/utilities/: clipsrc.sh
mvum/: index.html
odkconflation/: index.html
osm-merge/: index.html
osm_merge/: conflateBuildings.py  conflatePOI.py  conflator.py  geosupport.py  poidup.py  readjson.py  yamlfile.py
osm_merge/utilities/: Makefile  fastclip.cc  fastclip.hh  geojson2poly.py  index.sh  mvum.py  mvum.yaml  mvumhighways.py  nps.py  osmhighways.py  roadcore.py  tm-splitter.py  trails.py  update.sh  usgs.py  x
osmhighways/: index.html
results/: index.html
search/: search_index.json
starlink/: index.html
tests/: regions.geojson  test_placeholder.py
tests/data/: mvum-test.geojson  osm.osm  topo-test.geojson
testsuite/: 8345-project.geojson  8345-tasks.geojson  8359-project.geojson  8359-tasks.geojson
tm-splitter/: index.html
trails/: index.html
usgs/: index.html
utilities/: clipsrc.sh  extract.sh  fixnames.py  geojson2poly.py  getosm.sh  index.html  index.sh  mvum.py  nps.py  osmhighways.py  splittasks.sh  tm-splitter.py  trails.py  update.sh  usgs.py
validating/: index.html
wiki_redirect/: index.html
zion/: index.html
