[project]
name = "osm-merge"
dynamic = ["version"]
description = "Merge features and tags into existing OSM data."
authors = [
    {name = "Rob Savoye", email = "rob.savoye@hotosm.org"},
]
dependencies = [
    "codetiming>=1.3.0",
    "geojson>=2.5.0",
    "progress>=1.6",
    "psycopg2>=2.9.1",
    "py_cpuinfo>=9.0.0",
    "shapely>=1.8.5",
    "thefuzz>=0.19.0",
    # levenshtein used by thefuzz underneath (do not remove)
    "levenshtein>=0.20.0",
    "xmltodict>=0.13.0",
    "haversine>=2.8.0",
    "osm-rawdata>=0.1.7",
    "osm-fieldwork>=0.4.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = "AGPL-3.0-only"
keywords = ["hot", "osm", "openstreetmap"]
classifiers = [
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
homepage = "https://hotosm.github.io/osm-merge"
documentation = "https://hotosm.github.io/osm-merge"
repository = "https://github.com/hotosm/osm-merge"

[build-system]
requires = ["pdm-pep517>=1.1.4"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
addopts = "-ra -q -p no:warnings"
testpaths = [
    "tests",
]
pythonpath = "osm_merge"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
version_files = [
    "pyproject.toml:version",
    "osm_merge/__version__.py",
]
update_changelog_on_bump = true

[tool.pdm]
version = {from = "osm_merge/__version__.py"}
[tool.pdm.build]
includes = ["osm-merge"]
source-includes = ["tests", "LICENSE.md", "README.md"]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "commitizen>=3.6.0",
    "pre-commit>=3.3.3",
]
debug = [
    "debugpy>=1.6.7.post1",
    "ipdb>=0.13.13",
]
test = [
    "pytest>=7.4.0",
]
docs = [
    "mkdocs>=1.5.2",
    "mkdocs-material>=9.2.3",
    "mkdocstrings-python>=1.5.2",
    "mkdocs-exclude>=1.0.2",
]

[tool.black]
line-length = 132
target-versions = ["py310", "py311"]

[tool.ruff]
fix = true
line-length = 132
target-version = "py310"
select = ["I", "E", "W", "D", "B", "F", "N", "Q"]
ignore = ["N805", "B008"]
exclude = [
    ".git",
    ".ruff_cache",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
    "osm_merge/__version__.py",
]
[tool.ruff.pydocstyle]
convention = "google"

[project.scripts]
osm-merge = "osm_merge.conflator:main"
#conflator = "osm-merge.conflator:main"
